--- a/style.css
+++ b/style.css
@@ -5,5 +5,12 @@ Description:    Storefront child theme.
 Author:         Juan Carlos Jiménez Gutiérrez
 Author URI:     https://github.com/jcarlosj/
 Template:       storefront
-Version:        0.1.0
+Version:        0.1.1
+Requires at least: 5.4
+Tested up to: 7.4.0
+Requires PHP: 7.4.0
+License:      MIT License
+License URI:  https://choosealicense.com/licenses/mit/
+Text Domain:  digexp
+Tags:         e-commerce, two-columns, left-sidebar, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, featured-images, full-width-template, threaded-comments, accessibility-ready, rtl-language-support, footer-widgets, sticky-post, theme-options, editor-style
 */
