[$] SCSS: Ajusta implementacion de hojas de estilo

--- a/assets/src/sass/0-settings/_colors.scss
+++ b/assets/src/sass/0-settings/_colors.scss
@@ -57,7 +57,7 @@ $link-hover-gradient: linear-gradient(to bottom, $blue-100 0%, $blue-200 100%);
 
 // <body>
 $color__body-text: $black-800;
-$color__background-body: $white;
+$color__background-body: #F6F6F6;
 
 // <a>
 $color__link: $blue-100;
