--- a/assets/src/sass/2-generic/_elements.scss
+++ b/assets/src/sass/2-generic/_elements.scss
@@ -39,6 +39,14 @@ body {
 		font-family: inherit;
 		margin: 15px;
 	}
+
+	.site-header,
+	.site-content,
+	.site-footer {
+		max-width: $site-width;
+		margin: 0 auto;
+	}
+
 }
 
 // Gutenberg block quote support.
