[$] Hook > storefront_header: Crea barra de notificaciones

--- a/assets/src/sass/0-settings/_variables.scss
+++ b/assets/src/sass/0-settings/_variables.scss
@@ -10,6 +10,7 @@ $margin-bottom: 40px;
 
 // Default Border Radius
 $border-radius: 5px;
+$btn-border-radius: 5px;
 
 // mq breakpoints.
 $mq-breakpoints: (
