--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -6,8 +6,6 @@
 //@import "2-generic/gutenberg";
 
 // Layouts.
-@import "4-layouts/posts/meta";
-@import "4-layouts/posts/pagination";
-@import "4-layouts/header/nav/navigation";
+@import "4-layouts/index";
 
 // Components
