[+] Classes: Ajustes generales

--- a/assets/src/sass/2-generic/_elements.scss
+++ b/assets/src/sass/2-generic/_elements.scss
@@ -40,6 +40,12 @@ body {
 		margin: 15px;
 	}
 
+	.col-full {
+		margin: .5rem auto;
+		max-width: 98%;
+		padding: 0;
+	}
+
 	.site-header,
 	.site-content,
 	.site-footer {
