[$] SCSS: Elimina estilos innecesarios

--- a/assets/src/sass/4-layouts/_index.scss
+++ b/assets/src/sass/4-layouts/_index.scss
@@ -1,4 +1,3 @@
 @import "posts/meta";
 @import "posts/pagination";
-@import "header/nav/navigation";
-@import "header/notification-bar";
+@import "header/header";
