--- a/assets/src/sass/2-generic/_elements.scss
+++ b/assets/src/sass/2-generic/_elements.scss
@@ -41,9 +41,9 @@ body {
 	}
 
 	.col-full {
-		margin: 0;
-		max-width: 100%;
-		padding: 0;
+		max-width: 80em;
+		padding: 0 1rem;
+		width: 100%;
 	}
 
 	.site-header,
